Hack for better container spacing, was bugging me

--- a/app/assets/stylesheets/payback.scss
+++ b/app/assets/stylesheets/payback.scss
@@ -32,7 +32,7 @@ body {
 }
 
 body > .container {
-  margin: 10px auto 0;
+  margin: 25px auto 0;
 }
 
 @media (max-width: 630px) {
@@ -46,6 +46,11 @@ body > .container {
 .main-title {
   font-size: 3em;
   margin-bottom: 15px;
+}
+
+.dashboard-title {
+  // TODO: this is a hack
+  margin-top: -10px;
 }
 
 h1 {
